--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,9 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 UserSettings/EditorUserSettings.asset
 UserSettings/EditorUserSettings.asset
+webgl_sharing
+connectwebgl.zip
+ProjectSettings/Packages/com.unity.connect.share/Settings.json
+ProjectSettings/Packages/com.unity.connect.share/Settings.json
+ProjectSettings/Packages/com.unity.connect.share/Settings.json
+/ProjectSettings/Packages/com.unity.connect.share
